Correct Java 1.8 compliance bug for Generic module